course page basic structure done

--- a/style.css/course.css
+++ b/style.css/course.css
@@ -6,7 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "DM Sans", sans-serif;
 }
 
 /* nav bar */
@@ -19,20 +18,27 @@ nav {
   background-color: #151515;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 12px 40px;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 500;
   font-size: 30px;
   z-index: 3;
+  margin-bottom: 25px;
 }
 
 #logo {
   display: flex;
   gap: 10px;
-  align-items: center;
+  /* align-items: center; */
 }
 
-#logo > img {
+#logo p {
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 30px;
+}
+
+#logo img {
   width: 50px;
   height: 50px;
 }
@@ -42,6 +48,7 @@ nav > #search-box {
   display: flex;
   background-color: white;
   border-radius: 20px;
+  padding: 3px;
 }
 
 nav > #search-box button {
@@ -55,7 +62,7 @@ nav > #search-box button {
 nav #search-box input {
   width: 85%;
   height: 100%;
-  padding: 15px;
+  padding: 10px;
   font-size: 15px;
   border: none;
   outline: none;
@@ -68,9 +75,15 @@ nav #search-box input {
   align-items: center;
 }
 
-#links > a {
+#links a {
   text-decoration: none;
   color: white;
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 30px;
+}
+
+#links a:nth-child(1):hover {
+  border-bottom: 1px solid white;
 }
 
 #links > button {
@@ -90,3 +103,179 @@ nav #search-box input {
 }
 
 /* end of nav bar */
+
+/* course title */
+#title {
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+#title span{
+  font-family: "Darker Grotesque", sans-serif;
+  color: #af9fff;
+  border-bottom: 3px solid #af9fff;
+}
+/* end of course title */
+
+/* filter component */
+#filter {
+  display: flex;
+  font-family: "Darker Grotesque", sans-serif;
+  margin-bottom: 30px;
+  justify-content: center;
+  gap: 30px;
+  font-size: 20px;
+}
+
+.custom-select {
+  padding: 13px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  font-weight: 500;
+  outline: none;
+  text-align: center;
+}
+
+.custom-select option {
+  border-radius: 5px;
+  padding: 5px;
+}
+/* end of filter component */
+
+/* courses grid */
+#course-wrapper {
+  min-height: 45vh;
+}
+
+#course-grid {
+  font-family: "DM Sans", sans-serif;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  width: 70%;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+#course-grid .card {
+  /* background-color: #F4F3EC; */
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 10px;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+#course-grid .card img {
+  border-radius: 10px;
+}
+
+#course-grid .card h2 {
+  font-family: "Darker Grotesque", sans-serif;
+  line-height: 1;
+}
+
+#course-grid .card img {
+  width: 100%;
+}
+
+#course-grid .card :nth-child(3) {
+  color: #7b7b7b;
+}
+
+#course-grid .card :nth-child(5) {
+  font-weight: bold;
+}
+
+#course-grid .card button {
+  color: white;
+  background-color: #af9fff;
+  font-size: 18px;
+  padding: 8px;
+  font-family: "DM Sans", sans-serif;
+  border-radius: 15px;
+  border: none;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+#course-grid .card button:hover {
+  /* color: white;
+  background-color: #af9fff; */
+  cursor: pointer;
+}
+
+#rate {
+  font-weight: bold;
+  font-size: 20px;
+  /* color: rgb(255, 136, 0); */
+  color: #b4690e;
+}
+
+.fa-solid.fa-star, .fa-solid.fa-star-half-stroke {
+  font-size: 13px;
+}
+/* end of courses grid */
+
+/* footer */
+footer {
+  color: white;
+  background-color: #151515;
+  padding: 12px 40px;
+  font-family: "Darker Grotesque", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  z-index: 3;
+}
+
+footer > #contact {
+  margin: 20px 0 ;
+  text-decoration: none;
+}
+
+footer > #contact > p > a {
+  text-decoration: none;
+  color: white;
+  transition: border-bottom 0.3s ease;
+}
+
+footer a:hover {
+  border-bottom: 1px solid white;
+}
+
+footer > #extra {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer > #extra * {
+  display: flex;
+  font-size: 20px;
+} 
+
+footer #extra > #logo {
+  gap: 15px;
+  padding: 5px;
+}
+
+footer #terms {
+  gap: 25px;
+  justify-content: space-around;
+}
+
+#logo > img {
+  width: 50px;
+  height: 50px;
+}
+
+footer #developer span{
+  color: red;
+  margin-left: 3px;
+}
+/* end of footer */
