cart page basic structure done

--- a/style.css/index.css
+++ b/style.css/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
+html {
+  font-size: 16px;
+}
+
 * {
   /* border: 1px solid red; */
   margin: 0;
@@ -19,16 +23,17 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 40px;
+  padding: 0.5rem 2rem;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 2rem;
   z-index: 3;
 }
 
 #logo {
   display: flex;
-  gap: 10px;
+  gap: 0.5rem;
+  align-items: center;
 }
 
 #logo img {
@@ -39,7 +44,7 @@ nav {
 #links {
   width: 50%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #links a {
@@ -47,17 +52,17 @@ nav {
   color: white;
 }
 
-#links a:nth-child(1):hover {
-  border-bottom: 1px solid white;
+#links a:nth-child(1):hover, a:nth-child(2):hover {
+  border-bottom: 0.06rem solid white;
 }
 
 #links button {
   color: #151515;
   background-color: white;
-  font-size: 18px;
-  padding: 11px;
+  font-size: 1.2rem;
+  padding: 0.8rem;
   font-family: "DM Sans", sans-serif;
-  border-radius: 15px;
+  border-radius: 1rem;
   border: none;
 }
 
@@ -77,16 +82,17 @@ nav {
   color: white;
   font-family: "Darker Grotesque", sans-serif;
   justify-content: center;
-  padding: 50px 20px;
+  padding: 3.1rem 1.25rem;
+  gap: 0.7rem;
 }
 
 #container-1 > div:nth-child(1) {
   width: 25%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: space-around;
-  gap: 15px;
+  gap: 0.9rem;
 }
 
 #container-1 > div:nth-child(2) {
@@ -94,25 +100,24 @@ nav {
 }
 
 #container-1 h1 {
-  font-size: 70px;
+  font-size: 4.37rem;
   font-weight: 600;
-  line-height: .7;
+  line-height: 0.7;
 }
 
 #container-1 p {
   font-family: "DM sans", sans-serif;
-  font-size: 18px;
+  font-size: 1.12rem;
 }
 
 #container-1 button {
   color: #151515;
   background-color: white;
-  font-size: 18px;
-  padding: 9px;
+  font-size: 1.12rem;
+  padding: 0.56rem;
   font-family: "DM Sans", sans-serif;
-  border-radius: 15px;
+  border-radius: 0.93rem;
   border: none;
-  margin-right: 215px;
 }
 
 #container-1 button:hover {
@@ -123,86 +128,88 @@ nav {
 
 #container-1 img {
   width: 100%;
-  border-radius: 15px;
+  border-radius: 0.93rem;
 }
 /* end of container-1 */
 
 /* features carousel */
 #wrapper {
   position: relative;
-  padding: 100px 120px;
+  padding: 6.25rem 7.5rem;
   margin: auto;
 }
 
 #carousel {
   display: flex;
   overflow: hidden;
-  gap: 30px;
+  gap: 1.87rem;
   font-family: "DM Sans", sans-serif;
-  font-size: 18px;
+  font-size: 1.125rem;
   text-align: center;
-  /* width: calc(990px/3); */
 }
 
 .card > img {
-  height: 250px;
-  width: 250px;
+  height: 15.62rem;
+  width: 15.62rem;
   object-fit: cover;
-  border-radius: 70px;
-  margin-bottom: 10px;
+  border-radius: 4.37rem;
+  margin-bottom: 0.62rem;
 }
+
 .card > img:first-child {
-  margin-left: 3px;
+  margin-left: 0.18rem;
 }
 
 .card > p {
-  margin: 0 32px;
+  margin: 0 0.12rem;
   line-height: 1.1;
 }
 
 #leftArrow, #rightArrow {
   top: 50%;
   position: absolute;
-  padding: 20px;
+  padding: 1.25rem;
   background-color: #151515;
   border-radius: 50%;
-  font-size: 25px;
+  font-size: 1.56rem;
   cursor: pointer;
   transform: translateY(-60%);
 }
 
 #leftArrow {
-  left: 40px;
+  left: 2.5rem;
 }
 
 #rightArrow {
-  right: 40px;
+  right: 2.5rem;
 }
 /* end of features carousel */
 
 /* Large mid section */
 #mid-section {
-  padding: 80px;
+  padding: 5rem 0;
   background-color: #151515;
   color: white;
   font-family: "Darker Grotesque", sans-serif;
-  font-size: 140px;
+  font-size: 8.75rem;
   text-align: center;
   line-height: 0.7;
 }
 
 #mid-section > .wrapper {
-  margin: 50px;
-}
-
-#mid-section > .wrapper > div:nth-child(3) {
   display: flex;
-  margin-left: 105px;
+  flex-direction: column;
+  margin: 3.12rem;
 }
 
-#mid-section > .wrapper > div:nth-child(3) > img {
+#mid-section .wrapper div:nth-child(3) {
+  display: flex;
+  justify-content: center;
+}
+
+#mid-section .wrapper div:nth-child(3) img {
   border-radius: 50%;
-  margin-top: 30px;
+  margin-top: 1.87rem;
 }
 
 #gif2 {
@@ -211,24 +218,16 @@ nav {
 /* end of Large mid section */
 
 /* student review carousel */
-/* @keyframes slide {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-} */
 
 #student-wrapper {
-  padding: 80px;
+  padding: 5rem;
 }
 
 #student-wrapper > h2 {
-  font-size: 60px;
+  font-size: 3.75rem;
   font-family: "Darker Grotesque", sans-serif;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 
 #student-wrapper > h2 > span {
@@ -239,7 +238,7 @@ nav {
   display: flex;
   justify-content: space-between;
   font-family: "DM Sans", sans-serif;
-  font-size: 19px;
+  font-size: 1.188rem;
   font-weight: 500;
   line-height: 1;
   width: 90%;
@@ -249,13 +248,13 @@ nav {
 
 #student-carousel > .cards {
   width: 23%;
-  padding: 20px;
-  border-radius: 50px;
+  padding: 1.25rem;
+  border-radius: 3.125rem;
   background-color: #F4F3EC;
 }
 
 #student-carousel > .cards > p {
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 #student-carousel > .cards > p:nth-child(3) {
@@ -263,8 +262,8 @@ nav {
 }
 
 #student-carousel > .cards > div > img {
-  width: 73px;
-  height: 73px;
+  width: 4.563rem;
+  height: 4.563rem;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -275,15 +274,15 @@ nav {
 footer {
   color: white;
   background-color: #151515;
-  padding: 12px 40px;
+  padding: 0.75rem 2.5rem;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 1.875rem;
   z-index: 3;
 }
 
 footer > #contact {
-  margin: 20px 0 ;
+  margin: 1.25rem 0 ;
   text-decoration: none;
 }
 
@@ -294,7 +293,7 @@ footer > #contact > p > a {
 }
 
 footer a:hover {
-  border-bottom: 1px solid white;
+  border-bottom: 0.063rem solid white;
 }
 
 footer > #extra {
@@ -304,26 +303,38 @@ footer > #extra {
 
 footer > #extra * {
   display: flex;
-  font-size: 20px;
+  font-size: 1.25rem;
 } 
 
 footer #extra > #logo {
-  gap: 15px;
-  padding: 5px;
+  gap: 0.938rem;
+  padding: 0.313rem;
 }
 
 footer #terms {
-  gap: 25px;
+  gap: 1.563rem;
   justify-content: space-around;
 }
 
 #logo > img {
-  width: 50px;
-  height: 50px;
+  width: 3.125rem;
+  height: 3.125rem;
 }
 
 footer #developer span{
   color: red;
-  margin-left: 3px;
+  margin-left: 0.188rem;
 }
 /* end of footer */
+
+/* media query for tablets */
+@media only screen and (min-width: 436px) and (max-width: 1023px) {
+  html {
+    font-size: 13px;
+  }
+  #mid-section {
+    font-size: 6rem;
+  }
+}
+
+/* media query for mobile */
