--- a/style.css/cart.css
+++ b/style.css/cart.css
@@ -19,23 +19,17 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 40px;
+  padding: 10px 40px;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 500;
   font-size: 30px;
   z-index: 3;
-  margin-bottom: 25px;
+  margin-bottom: 3rem;
 }
 
 #logo {
   display: flex;
   gap: 10px;
-  align-items: center;
-}
-
-#logo p {
-  font-family: "Darker Grotesque", sans-serif;
-  font-size: 30px;
 }
 
 #logo img {
@@ -43,50 +37,22 @@ nav {
   height: 50px;
 }
 
-nav > #search-box {
-  width: 40%;
-  display: flex;
-  background-color: white;
-  border-radius: 20px;
-  padding: 3px;
-}
-
-nav > #search-box button {
-  border-radius: 20px;
-  font-size: 15px;
-  background-color: white;
-  border: none;
-  margin-left: 15px;
-}
-
-nav #search-box input {
-  width: 85%;
-  height: 100%;
-  padding: 10px;
-  font-size: 15px;
-  border: none;
-  outline: none;
-}
-
 #links {
-  width: 30%;
+  width: 50%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
 }
 
 #links a {
   text-decoration: none;
   color: white;
-  font-family: "Darker Grotesque", sans-serif;
-  font-size: 30px;
 }
 
 #links a:nth-child(1):hover {
   border-bottom: 1px solid white;
 }
 
-#links > button {
+#links button {
   color: #151515;
   background-color: white;
   font-size: 18px;
@@ -96,12 +62,12 @@ nav #search-box input {
   border: none;
 }
 
-#links > button:hover {
+#links button:hover {
   color: white;
   background-color: #af9fff;
   cursor: pointer;
+  text-decoration: none;
 }
-
 /* end of nav bar */
 
 /* course title */
@@ -120,81 +86,88 @@ nav #search-box input {
 }
 /* end of course title */
 
-/* filter component */
-#filter {
-  display: flex;
-  font-family: "Darker Grotesque", sans-serif;
-  margin-bottom: 30px;
-  justify-content: center;
-  gap: 30px;
-  font-size: 20px;
+/* cart item container */
+#cart-item-container {
+  min-height: 50vh;
 }
 
-.custom-select {
-  padding: 13px;
-  border-radius: 20px;
-  border: none;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  font-weight: 500;
-  outline: none;
-  text-align: center;
-}
-
-.custom-select option {
-  border-radius: 5px;
-  padding: 5px;
-}
-/* end of filter component */
-
-/* courses grid */
-#course-wrapper {
-  min-height: 45vh;
-}
-
-#course-grid {
-  font-family: "DM Sans", sans-serif;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
+.card {
   width: 70%;
   margin: auto;
-  margin-bottom: 50px;
-}
-
-#course-grid .card {
-  /* background-color: #F4F3EC; */
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
+  grid-template-areas: 
+  "img info info btn amt";
+  gap: 10px; 
   padding: 20px;
   border-radius: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
+  margin-top: 20px;
 }
 
-#course-grid .card img {
+.img-div {
+  grid-area: img; 
+}
+
+.img-div img {
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
+  object-fit: cover;
 }
 
-#course-grid .card h2 {
+.info {
+  grid-area: info;
+}
+
+.info * {
+  margin-top: 5px;
+}
+
+.info h3 {
   font-family: "Darker Grotesque", sans-serif;
   line-height: 1;
+  font-size: 24px;
 }
 
-#course-grid .card img {
-  width: 100%;
+.info p {
+  font-family: "DM Sans", sans-serif;
+  font-size: 16px;
 }
 
-#course-grid .card :nth-child(3) {
+.info p:nth-child(2) {
   color: #7b7b7b;
 }
 
-#course-grid .card :nth-child(5) {
+.info .rate {
   font-weight: bold;
+  font-size: 20px;
+  color: #b4690e;
+  margin-right: 2px;
 }
 
-#course-grid .card button {
+.info .rate i:nth-child(1) {
+  margin-left: 5px;
+}
+
+.info .rate i {
+  margin-left: 2px;
+}
+
+.fa-solid.fa-star, .fa-solid.fa-star-half-stroke {
+  font-size: 13px;
+}
+
+.btn {
+  grid-area: btn;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn button {
   color: white;
   background-color: #af9fff;
   font-size: 18px;
@@ -205,27 +178,67 @@ nav #search-box input {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-#course-grid .card .added-button {
-  /* background-color: #808080; */
-  background-color: #905171;
-}
-
-#course-grid .card button:hover {
-  /* color: white;
-  background-color: #af9fff; */
+.btn button:hover {
   cursor: pointer;
 }
 
-#rate {
+.price {
+  grid-area: amt;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "DM Sans", sans-serif;
   font-weight: bold;
-  font-size: 20px;
-  color: #b4690e;
+  font-size: 16px;
 }
 
-.fa-solid.fa-star, .fa-solid.fa-star-half-stroke {
-  font-size: 13px;
+/* handling total card */
+
+.totalCard {
+  width: 70%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
+  grid-template-areas: 
+  "sum sum sum btn amt";
+  gap: 10px; 
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
+  margin-top: 20px;
 }
-/* end of courses grid */
+
+.summary {
+  font-family: "Darker Grotesque", sans-serif;
+  line-height: 1;
+  font-size: 26px;
+  grid-area: sum;
+  display: flex;
+  align-items: center;
+  color: #7b7b7b;
+}
+
+.totalBtn {
+  grid-area: btn;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.totalBtn button {
+  color: white;
+  background-color: #af9fff;
+  font-size: 18px;
+  padding: 8px;
+  font-family: "DM Sans", sans-serif;
+  border-radius: 15px;
+  border: none;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+/* end of handling total card */
+/* end of cart item container */
 
 /* footer */
 footer {
@@ -236,6 +249,7 @@ footer {
   font-weight: 500;
   font-size: 30px;
   z-index: 3;
+  margin-top: 50px;
 }
 
 footer > #contact {
