--- a/style.css/index.css
+++ b/style.css/index.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
-html {
-  font-size: 16px;
-}
-
 * {
   /* border: 1px solid red; */
   margin: 0;
@@ -23,16 +19,16 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 2rem;
+  padding: 12px 40px;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 30px;
   z-index: 3;
 }
 
 #logo {
   display: flex;
-  gap: 0.5rem;
+  gap: 10px;
   align-items: center;
 }
 
@@ -44,7 +40,7 @@ nav {
 #links {
   width: 50%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 #links a {
@@ -53,16 +49,16 @@ nav {
 }
 
 #links a:nth-child(1):hover, a:nth-child(2):hover {
-  border-bottom: 0.06rem solid white;
+  border-bottom: 1px solid white;
 }
 
 #links button {
   color: #151515;
   background-color: white;
-  font-size: 1.2rem;
-  padding: 0.8rem;
+  font-size: 18px;
+  padding: 11px;
   font-family: "DM Sans", sans-serif;
-  border-radius: 1rem;
+  border-radius: 15px;
   border: none;
 }
 
@@ -76,47 +72,54 @@ nav {
 
 /* container-1 */
 #container-1 {
-  /* border: 1px solid blue; */
-  display: flex;
   background-color: #151515;
   color: white;
   font-family: "Darker Grotesque", sans-serif;
   justify-content: center;
-  padding: 3.1rem 1.25rem;
-  gap: 0.7rem;
+  padding: 50px 0;
 }
 
-#container-1 > div:nth-child(1) {
-  width: 25%;
+#container-1 .card {
+  display: flex;
+  /* width: 80%; */
+  margin: auto;
+  gap: 15px;
+  justify-content: center;
+}
+
+#container-1 .card div:nth-child(1) {
+  width: 24%;
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: space-around;
-  gap: 0.9rem;
+  gap: 15px;
 }
 
-#container-1 > div:nth-child(2) {
+#container-1 .card div:nth-child(2) {
   width: 40%;
+  display: flex;
+  align-items: center;
 }
 
 #container-1 h1 {
-  font-size: 4.37rem;
+  font-size: 70px;
   font-weight: 600;
-  line-height: 0.7;
+  line-height: .7;
 }
 
 #container-1 p {
   font-family: "DM sans", sans-serif;
-  font-size: 1.12rem;
+  font-size: 18px;
 }
 
 #container-1 button {
   color: #151515;
   background-color: white;
-  font-size: 1.12rem;
-  padding: 0.56rem;
+  font-size: 18px;
+  padding: 9px;
   font-family: "DM Sans", sans-serif;
-  border-radius: 0.93rem;
+  border-radius: 15px;
   border: none;
 }
 
@@ -128,106 +131,108 @@ nav {
 
 #container-1 img {
   width: 100%;
-  border-radius: 0.93rem;
+  border-radius: 15px;
 }
 /* end of container-1 */
 
 /* features carousel */
 #wrapper {
   position: relative;
-  padding: 6.25rem 7.5rem;
+  padding: 100px 120px;
   margin: auto;
 }
 
 #carousel {
   display: flex;
   overflow: hidden;
-  gap: 1.87rem;
+  gap: 30px;
   font-family: "DM Sans", sans-serif;
-  font-size: 1.125rem;
+  font-size: 18px;
   text-align: center;
 }
 
 .card > img {
-  height: 15.62rem;
-  width: 15.62rem;
+  height: 250px;
+  width: 250px;
   object-fit: cover;
-  border-radius: 4.37rem;
-  margin-bottom: 0.62rem;
+  border-radius: 70px;
+  margin-bottom: 10px;
 }
-
 .card > img:first-child {
-  margin-left: 0.18rem;
+  margin-left: 3px;
 }
 
 .card > p {
-  margin: 0 0.12rem;
+  margin: 0 32px;
   line-height: 1.1;
 }
 
 #leftArrow, #rightArrow {
   top: 50%;
   position: absolute;
-  padding: 1.25rem;
+  padding: 20px;
   background-color: #151515;
   border-radius: 50%;
-  font-size: 1.56rem;
+  font-size: 25px;
   cursor: pointer;
   transform: translateY(-60%);
 }
 
 #leftArrow {
-  left: 2.5rem;
+  left: 40px;
 }
 
 #rightArrow {
-  right: 2.5rem;
+  right: 40px;
 }
 /* end of features carousel */
 
 /* Large mid section */
 #mid-section {
-  padding: 5rem 0;
+  padding: 50px 0 90px 0;
   background-color: #151515;
   color: white;
   font-family: "Darker Grotesque", sans-serif;
-  font-size: 8.75rem;
+  font-size: 140px;
   text-align: center;
   line-height: 0.7;
+  width: 100%;
 }
 
 #mid-section > .wrapper {
   display: flex;
   flex-direction: column;
-  margin: 3.12rem;
+  width: 80%;
+  margin: auto;
 }
 
-#mid-section .wrapper div:nth-child(3) {
+#mid-section .wrapper div {
   display: flex;
   justify-content: center;
+  align-items: end;
 }
 
-#mid-section .wrapper div:nth-child(3) img {
+#mid-section .wrapper div img {
+  width: 140px;
   border-radius: 50%;
-  margin-top: 1.87rem;
+  position: relative;
+  transform: translateY(24px);
+  max-width: 140px;
 }
 
-#gif2 {
-  z-index: 2;
-}
 /* end of Large mid section */
 
 /* student review carousel */
 
 #student-wrapper {
-  padding: 5rem;
+  padding: 80px 0 80px 0;
 }
 
 #student-wrapper > h2 {
-  font-size: 3.75rem;
+  font-size: 60px;
   font-family: "Darker Grotesque", sans-serif;
   text-align: center;
-  margin-bottom: 1.875rem;
+  margin-bottom: 30px;
 }
 
 #student-wrapper > h2 > span {
@@ -235,26 +240,28 @@ nav {
 }
 
 #student-carousel {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
   justify-content: space-between;
   font-family: "DM Sans", sans-serif;
-  font-size: 1.188rem;
+  font-size: 19px;
   font-weight: 500;
   line-height: 1;
-  width: 90%;
+  width: 80%;
   margin: auto;
   /* animation: 15s slide infinite linear; */
 }
 
 #student-carousel > .cards {
-  width: 23%;
-  padding: 1.25rem;
-  border-radius: 3.125rem;
+  /* width: 23%; */
+  padding: 20px;
+  border-radius: 50px;
   background-color: #F4F3EC;
 }
 
 #student-carousel > .cards > p {
-  margin-top: 1.25rem;
+  margin-top: 20px;
 }
 
 #student-carousel > .cards > p:nth-child(3) {
@@ -262,8 +269,8 @@ nav {
 }
 
 #student-carousel > .cards > div > img {
-  width: 4.563rem;
-  height: 4.563rem;
+  width: 73px;
+  height: 73px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -274,15 +281,16 @@ nav {
 footer {
   color: white;
   background-color: #151515;
-  padding: 0.75rem 2.5rem;
+  padding: 12px 40px;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 500;
-  font-size: 1.875rem;
+  font-size: 30px;
   z-index: 3;
 }
 
 footer > #contact {
-  margin: 1.25rem 0 ;
+  display: flex;
+  margin: 20px 0 ;
   text-decoration: none;
 }
 
@@ -293,48 +301,471 @@ footer > #contact > p > a {
 }
 
 footer a:hover {
-  border-bottom: 0.063rem solid white;
+  border-bottom: 1px solid white;
 }
 
 footer > #extra {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer > #extra * {
   display: flex;
-  font-size: 1.25rem;
+  font-size: 20px;
 } 
 
 footer #extra > #logo {
-  gap: 0.938rem;
-  padding: 0.313rem;
+  gap: 15px;
+  padding: 5px;
 }
 
 footer #terms {
-  gap: 1.563rem;
+  gap: 25px;
   justify-content: space-around;
 }
 
 #logo > img {
-  width: 3.125rem;
-  height: 3.125rem;
+  width: 50px;
+  height: 50px;
 }
 
 footer #developer span{
   color: red;
-  margin-left: 0.188rem;
+  margin-left: 3px;
 }
 /* end of footer */
 
-/* media query for tablets */
-@media only screen and (min-width: 436px) and (max-width: 1023px) {
-  html {
-    font-size: 13px;
+/* ------------------------------------------ */
+
+/* Media Queries */
+
+@media only screen and (max-width: 1204px) { 
+  #container-1 .card div:nth-child(1) {
+    width: 27%; 
   }
-  #mid-section {
-    font-size: 6rem;
+  
+  #container-1 .card div:nth-child(2) {
+    width: 45%;
+  }
+
+  #student-carousel {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    font-size: 19px;
+    font-weight: 500;
+    line-height: 1;
+    width: 90%;
+    margin: auto;
   }
 }
 
-/* media query for mobile */
+@media only screen and (max-width: 1037px) {
+  #container-1 .card div:nth-child(2) {
+    width: 45%;
+  }
+  
+  #container-1 h1 {
+    font-size: 60px;
+  }
+  
+  #container-1 p {
+    font-family: "DM sans", sans-serif;
+    font-size: 15px;
+  }
+  
+  #container-1 button {
+    color: #151515;
+    background-color: white;
+    font-size: 15px;
+    padding: 7px;
+  }
+
+  #mid-section {
+    padding: 50px 0 90px 0;
+    font-size: 120px;
+    line-height: 0.7;
+    width: 100%;
+  }
+
+  #mid-section .wrapper div img {
+    width: 120px;
+  }
+
+  #student-carousel {
+    grid-template-columns: repeat(3, 1fr);
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  footer > #contact {
+    justify-content: center;
+  }
+  footer > #extra {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    /* flex-wrap: wrap; */
+  }
+  footer #extra #logo {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+  }
+
+  footer #terms {
+    justify-content: center;
+    gap: 50px;
+  }
+
+  footer #developer {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 838px) {
+  nav {
+    font-size: 25px;
+  }
+
+  nav p {
+    display: none;
+  }
+
+  #links button {
+    padding: 8px;
+  }
+
+  #container-1 .card div:nth-child(1) {
+    width: 28%;
+  }
+
+  #container-1 .card div:nth-child(2) {
+    width: 55%;
+  }
+  
+  #container-1 h1 {
+    font-size: 50px;
+  }
+  
+  #container-1 p {
+    font-family: "DM sans", sans-serif;
+    font-size: 15px;
+  }
+  
+  #container-1 button {
+    color: #151515;
+    background-color: white;
+    font-size: 15px;
+    padding: 7px;
+  }
+
+  #mid-section {
+    padding: 30px 0 70px 0;
+    font-size: 100px;
+    line-height: 0.7;
+    width: 100%;
+  }
+
+  #mid-section .wrapper div img {
+    width: 100px;
+  }
+
+  #student-wrapper {
+    padding: 50px 0 50px 0;
+  }
+
+  #student-carousel {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 692px) {
+  #container-1 {
+    padding: 30px 0;
+  }
+
+  .card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #container-1 .card div:nth-child(1) {
+    width: 70%;
+    text-align: center;
+  }
+
+  #container-1 .card div:nth-child(2) {
+    width: 55%;
+  }
+  
+  #container-1 h1 {
+    font-size: 50px;
+  }
+  
+  #container-1 p {
+    font-family: "DM sans", sans-serif;
+    font-size: 15px;
+  }
+  
+  #container-1 button {
+    color: #151515;
+    background-color: white;
+    font-size: 15px;
+    padding: 7px;
+  }
+
+  #links {
+    width: 70%;
+  }
+
+  #mid-section {
+    padding: 30px 0 70px 0;
+    font-size: 80px;
+    line-height: 0.7;
+    width: 100%;
+  }
+
+  #mid-section .wrapper div img {
+    width: 100px;
+  }
+
+  #student-wrapper {
+    padding: 50px 0 50px 0;
+  }
+
+  #student-wrapper > h2 {
+    font-size: 45px;
+    margin-bottom: 25px;
+  }
+
+  #student-carousel {
+    grid-template-columns: repeat(1, 1fr);
+    font-size: 17px;
+    gap: 15px;
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  nav {
+    font-size: 25px;
+  }
+
+  #links {
+    width: 80%;
+  }
+
+  #links button {
+    padding: 7px;
+  }
+
+  #container-1 {
+    padding: 25px 0;
+  }
+
+  .card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #container-1 .card div:nth-child(1) {
+    width: 80%;
+    text-align: center;
+  }
+
+  #container-1 .card div:nth-child(2) {
+    width: 57%;
+  }
+  
+  #container-1 h1 {
+    font-size: 45px;
+  }
+  
+  #container-1 p {
+    font-family: "DM sans", sans-serif;
+    font-size: 14px;
+  }
+  
+  #container-1 button {
+    color: #151515;
+    background-color: white;
+    font-size: 15px;
+    padding: 7px;
+  }
+
+  #mid-section {
+    padding: 30px 0 70px 0;
+    font-size: 50px;
+    line-height: 1;
+    width: 100%;
+  }
+
+  #mid-section .wrapper div img {
+    width: 70px;
+    transform: translateY(12px);
+  }
+
+  #student-wrapper {
+    padding: 50px 0 50px 0;
+  }
+
+  #student-wrapper > h2 {
+    font-size: 30px;
+    margin-bottom: 25px;
+  }
+
+  #student-carousel {
+    grid-template-columns: repeat(1, 1fr);
+    font-size: 17px;
+    gap: 15px;
+    width: 70%;
+  }
+
+  footer {
+    padding: 5px 10px;
+  }
+
+  footer > #contact {
+    margin: 0;
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  
+  footer > #extra {
+    gap: 10px;
+    /* flex-wrap: wrap; */
+  }
+  footer #extra #logo {
+    gap: 40px;
+  }
+
+  footer #terms {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+  footer #developer {
+    justify-content: center;
+  }
+
+}
+
+@media only screen and (max-width: 406px) {
+  #links {
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  #links button {
+    display: none;
+  }
+
+  #container-1 {
+    padding: 25px 0;
+  }
+
+  .card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #container-1 .card div:nth-child(1) {
+    width: 90%;
+    text-align: center;
+  }
+
+  #container-1 .card div:nth-child(2) {
+    width: 60%;
+  }
+  
+  #container-1 h1 {
+    font-size: 42px;
+  }
+  
+  #container-1 p {
+    font-family: "DM sans", sans-serif;
+    font-size: 13px;
+  }
+  
+  #container-1 button {
+    font-size: 15px;
+    padding: 6px;
+  }
+
+  #mid-section {
+    padding: 20px 0 50px 0;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  #container-1 {
+    padding: 25px 0;
+  }
+
+  .card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #container-1 .card div:nth-child(1) {
+    width: 96%;
+    text-align: center;
+  }
+
+  #container-1 .card div:nth-child(2) {
+    width: 60%;
+  }
+  
+  #container-1 h1 {
+    font-size: 40px;
+  }
+  
+  #container-1 p {
+    font-family: "DM sans", sans-serif;
+    font-size: 14px;
+  }
+  
+  #container-1 button {
+    font-size: 15px;
+    padding: 6px;
+  }
+
+  #mid-section {
+    padding: 20px 0 40px 0;
+    font-size: 30px;
+    line-height: 1;
+    width: 100%;
+  }
+
+  #mid-section .wrapper div img {
+    width: 50px;
+    transform: translateY(7px);
+  }
+
+  #student-wrapper {
+    padding: 50px 0 50px 0;
+  }
+
+  #student-wrapper > h2 {
+    font-size: 30px;
+    margin-bottom: 25px;
+  }
+
+  #student-carousel {
+    grid-template-columns: repeat(1, 1fr);
+    font-size: 17px;
+    gap: 15px;
+    width: 90%;
+  }
+}
+
