worked on media qurery and polished some parts of website

--- a/style.css/cart.css
+++ b/style.css/cart.css
@@ -207,7 +207,6 @@ nav {
   border-radius: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   background-color: white;
-  margin-top: 20px;
 }
 
 .summary {
@@ -229,13 +228,14 @@ nav {
 
 .totalBtn button {
   color: white;
-  background-color: #af9fff;
+  /* background-color: #af9fff; */
+  background-color: #3d3d3d;
   font-size: 18px;
   padding: 8px;
   font-family: "DM Sans", sans-serif;
   border-radius: 15px;
   border: none;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
 }
 /* end of handling total card */
 /* end of cart item container */
