--- a/style.css/index.css
+++ b/style.css/index.css
@@ -81,7 +81,6 @@ nav {
 
 #container-1 .card {
   display: flex;
-  /* width: 80%; */
   margin: auto;
   gap: 15px;
   justify-content: center;
@@ -129,7 +128,7 @@ nav {
   cursor: pointer;
 }
 
-#container-1 img {
+#container-1 > .card > div:nth-child(2) > img {
   width: 100%;
   border-radius: 15px;
 }
@@ -137,12 +136,18 @@ nav {
 
 /* features carousel */
 #wrapper {
+  display: flex;
+  padding: 100px 0;
+  justify-content: center;
+}
+
+.sub-wrapper {
   position: relative;
-  padding: 100px 120px;
-  margin: auto;
+  width: 83%;
 }
 
 #carousel {
+  width: 100%;
   display: flex;
   overflow: hidden;
   gap: 30px;
@@ -151,18 +156,21 @@ nav {
   text-align: center;
 }
 
-.card > img {
+.sub-wrapper #carousel .card img {
   height: 250px;
   width: 250px;
   object-fit: cover;
   border-radius: 70px;
   margin-bottom: 10px;
 }
-.card > img:first-child {
-  margin-left: 3px;
+.card:nth-child(1) > img {
+  margin-left: 15px;
+}
+.card:nth-child(9) > img {
+  margin-right: 15px;
 }
 
-.card > p {
+.sub-wrapper .card p {
   margin: 0 32px;
   line-height: 1.1;
 }
@@ -175,15 +183,17 @@ nav {
   border-radius: 50%;
   font-size: 25px;
   cursor: pointer;
-  transform: translateY(-60%);
+  transform: translateY(-50%);
 }
 
 #leftArrow {
-  left: 40px;
+  left: 0;
+  transform: translate(-100%, -50%);
 }
 
 #rightArrow {
-  right: 40px;
+  right: 0;
+  transform: translate(+120%, -50%);
 }
 /* end of features carousel */
 
@@ -341,6 +351,11 @@ footer #developer span{
 /* Media Queries */
 
 @media only screen and (max-width: 1204px) { 
+  .sub-wrapper {
+    position: relative;
+    width: 70%;
+  }
+
   #container-1 .card div:nth-child(1) {
     width: 27%; 
   }
@@ -426,6 +441,47 @@ footer #developer span{
   }
 }
 
+@media only screen and (max-width: 968px) {
+  #wrapper {
+    padding: 80px 0;
+  }
+  
+  .sub-wrapper {
+    position: relative;
+    width: 76%;
+  }
+  
+  #carousel {
+    gap: 24px;
+  }
+  
+  .card img {
+    height: 220px;
+    width: 220px;
+    object-fit: cover;
+    border-radius: 70px;
+    margin-bottom: 10px;
+  }
+
+  .card:nth-child(1) > img {
+    margin-left: 12px;
+  }
+
+  .card:nth-child(9) > img {
+    margin-right: 12px;
+  }
+  
+  .card p {
+    line-height: 1;
+    font-size: 16px;
+  }
+  
+  #leftArrow, #rightArrow {
+    padding: 15px;
+    font-size: 22px;
+  }
+}
+
 @media only screen and (max-width: 838px) {
   nav {
     font-size: 25px;
@@ -480,6 +536,17 @@ footer #developer span{
 
   #student-carousel {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width:776px) {
+  #wrapper {
+    padding: 70px 0 50px 0;
+  }
+  
+  .sub-wrapper {
+    position: relative;
+    width: 63%;
   }
 }
 
@@ -562,6 +629,25 @@ footer #developer span{
 
   #links button {
     padding: 7px;
+  }
+
+  #wrapper {
+    padding: 40px 0 40px 0;
+  }
+  
+  .sub-wrapper {
+    width: 51%;
+    min-width: 244px;
+  }
+
+  #leftArrow {
+    left: 0;
+    transform: translate(-20%, -80%);
+  }
+  
+  #rightArrow {
+    right: 0;
+    transform: translate(+20%, -80%);
   }
 
   #container-1 {
